--- a/scss/contenedores/_section.scss
+++ b/scss/contenedores/_section.scss
@@ -13,10 +13,9 @@ header{
                 div{
                     div{
                         .nav-link{
-
-                        transition-property: all;
-                        transition-duration: 100ms;
-                        &:hover{
+                           transition-property: all;
+                           transition-duration: 100ms;
+                            &:hover{
                             transform: scale(1,2);
                         }
                         }
@@ -34,15 +33,7 @@ header{
 // estructuro main
 
 main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    .videos{
-        margin-left: 100px;
-
-    }
-
+    @include flex;
 
     h1{
         color: blueviolet;
@@ -51,9 +42,7 @@ main{
         margin-top: 20px;
         grid-area: h1;
     }
-    .contactoo{
-        align-items: center;
-    }
+
 
     img{
         width: 70%;
@@ -66,6 +55,7 @@ main{
         text-align: center;
         font-size: xx-large;
         border: 4px solid blueviolet;
+        margin-top: 20px;
        grid-area: h2;
     }
     p{
