--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,9 @@
 
 
 @import "utilidades/variables";
-@import "contenedores/section";
+@import "utilidades/mixin";
 @import "utilidades/media-qry";
+@import "contenedores/section";
+
 
 
